# world_editor

./: CMakeLists.txt  main.cpp
engine/: CMakeLists.txt  config.h  core.hpp
engine/application/: CMakeLists.txt
engine/application/include/application/: application.hpp
engine/application/resources/: main.txt
engine/application/src/: application.cpp  main.cpp
engine/components/: camera.h  collision.h  component.h  components.h  font.h  manager.h  mesh.h  position.h  rectangle.h  render.h  size.h  speed.h  text.h  texture.h
engine/core/: CMakeLists.txt  cmake_install.cmake
engine/core/src/: main.cpp
engine/di/: CMakeLists.txt  cmake_install.cmake
engine/di/src/: injector.cpp  registry.cpp
engine/entities/: entities.h  entity.h
engine/graphics/: CMakeLists.txt
engine/level/: CMakeLists.txt
engine/level/src/: tile_map.cpp
engine/managers/: manager.h
engine/meta/: CMakeLists.txt  cmake_install.cmake
engine/resources/: atlas.h  fonts.h  graphics.h  resources.h
engine/systems/: fps_counter.h  render.h  run_condition.h  systems.h
engine/tools/: CMakeLists.txt  indexer.cpp
engine/ui/: canvas.h
engine/utils/: binary.h  vector.h
examples/: CMakeLists.txt  cmake_install.cmake
examples/argentum/: CMakeLists.txt  argentum copy.cpp  argentum.cpp
examples/jsonify/: CMakeLists.txt
examples/jsonify/src/: main.cpp
examples/sfml/: CMakeLists.txt  cmake_install.cmake
examples/sfml/src/: main.cpp
resources/: main.txt
resources/INIT/: Config.ini  Graficos.ind  fxs.ini
resources/Init/: grhindex.ini
support/: CMakeLists.txt
support/jsonify/: CMakeLists.txt
support/jsonify/src/: main.cpp
world_editor/: CMakeLists.txt
world_editor/camera/core/: CMakeLists.txt
world_editor/camera/init/: CMakeLists.txt
world_editor/ecs/: CMakeLists.txt
world_editor/ecs/src/: injector.cpp  registry.cpp
world_editor/engine/core/: CMakeLists.txt
world_editor/events/core/: CMakeLists.txt
world_editor/events/init/: CMakeLists.txt
world_editor/graphics/: CMakeLists.txt
world_editor/graphics/core/: CMakeLists.txt
world_editor/graphics/init/: CMakeLists.txt
world_editor/main/: CMakeLists.txt
(+62 files in other folders)
